Fixed weird random behabiour mixing alternate options and omitting some of them